
* The api:security.handlers.LoginHandler#loginFailed-io.micronaut.security.authentication.AuthenticationFailed-[LoginHandler#loginFailed] method has been deprecated. Override the new default method that takes an api:security.authentication.AuthenticationResponse[] instead.

* The api:security.authentication.providers.DelegatingAuthenticationProvider[] and its related APIs have been deprecated and will be removed in a future release without any replacement. If your application currently overrides these APIs, copy the code into your codebase.

== Annotation Processing

* The ann:security.annotation.Secured[] annotation has been moved to a separate module in order to reduce the number of classes in the annotation processor scope. If you currently have `micronaut-security` in the classpath of your compiler, the entry can be changed to `micronaut-security-annotations`.

== Improvements

* It is now possible to gain access to the request in your api:security.authentication.AuthenticationProvider[]. Simply override the default method in the interface that takes the request as an argument with your own implementation. The old method is no longer called from the framework.

* It is no longer assumed that a failed authentication response is an instance of api:security.authentication.AuthenticationFailed[]. That now allows for any subclass of api:security.authentication.AuthenticationResponse[] to be emitted in the case of an authentication failure.

* A new constructor for api:security.authentication.AuthenticationFailed[] that takes a string message has been added to allow for custom error messages.

* It is now possible to require all api:security.authentication.AuthenticationProvider[]s to return a successful authentication response. Set `micronaut.security.authentication-strategy: ALL` to enable this functionality.