@@ -23,3 +23,5 @@ Micronaut Security {version} includes changes to make the transition to version 
 * A new constructor for api:security.authentication.AuthenticationFailed[] that takes a string message has been added to allow for custom error messages.
 
 * It is now possible to require all api:security.authentication.AuthenticationProvider[]s to return a successful authentication response. Set `micronaut.security.authentication-strategy: ALL` to enable this functionality.
+
+* The token propagation implementation will now no longer override an existing token.
